fixed letter spacing error at 1440

--- a/src/styles/components/_tech.scss
+++ b/src/styles/components/_tech.scss
@@ -341,6 +341,8 @@
       padding: 5rem 10rem 0 11rem;
     }
     @media (min-width: 1440px) {
+       line-height: 50px;
+      letter-spacing: -1px;
       font-size: 42px;
       padding: 6rem 0rem 0 0rem;
       margin-bottom: 3rem;
